--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -8,6 +8,15 @@
           	<li>	
           	  <%= link_to 'Home', root_path %>
           	</li>
+           <!--  <li>  
+              <%= link_to 'Register', new_user_registration_path %>
+            </li>
+            <li>  
+              <%= link_to 'Sign Out', destroy_user_session_path, :method => 'delete' %>
+            </li>
+            <li>  
+              <%= link_to 'Sign In', new_user_session_path %>
+            </li> -->
         </ul>
       </div>
   </nav>
