add menu and header

--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -1,23 +1,15 @@
-<div class="page-header">
-  <h1 class="pull-right span12">
-      Email 
-  </h1>
-  <nav class="navbar">
-      <div class="navbar-inner">
-        <ul class="nav">
-          	<li>	
-          	  <%= link_to 'Home', root_path %>
-          	</li>
-            <!-- <li>  
-              <%= link_to 'Register', new_user_registration_path %>
-            </li>
-            <li>  
-              <%= link_to 'Sign Out', destroy_user_session_path, :method => 'delete' %>
-            </li>
-            <li>  
-              <%= link_to 'Sign In', new_user_session_path %>
-            </li> -->
-        </ul>
-      </div>
-  </nav>
-</div>
+<nav class="navbar ">
+    <div class="navbar-inner ">
+      <ul class="nav">
+        	<li class="span3">	
+        	  <%= link_to 'Download', root_path %>
+        	</li>
+          <li class="span5">
+            <%= link_to 'Sign Up', root_path %>
+          </li>
+          <li class="span3">  
+            <%= link_to 'Log in', root_path %>
+          </li> 
+      </ul>
+    </div>
+</nav>
