--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    
+
+<%= render partial: 'shared/header' %>     
 <%= render partial: 'shared/meniu' %> 
 <%= yield %>
   </div>
