add background and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,14 @@
 </head>
 <body>
   <div class="container">
+ 
 
 <%= render partial: 'shared/header' %>     
-<%= render partial: 'shared/meniu' %> 
+<%= render partial: 'shared/meniu' %>
 <%= yield %>
+<hr>
+<%= render partial: 'shared/footer' %>    
+
   </div>
 </body>
 </html>
