--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,14 +1,32 @@
-.header{
+.header {
 	display: block;
 	text-align: center;
 	font-size: 40px;
 	margin: 30px auto;
+
 }
 
 /*li:first-child{
 	padding-left: 50px;
 }*/
 
-.navbar-inner{
+.navbar-inner {
 	text-align: center;
+	opacity: 0.6;
+}
+html {
+ background-image: url("background.jpg"); 
+ background-size: cover;
+}
+
+body {
+	background-color: transparent;
+}
+hr {
+	opacity: 0.6;
+}
+a:hover{
+	text-decoration: none;
+	background-color: transparent;
+	opacity: 0.5;
 }
