--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,3 +30,12 @@ a:hover{
 	background-color: transparent;
 	opacity: 0.5;
 }
+button {
+	width: 150px;
+	height: 150px;
+	background-color: rgba(255,255,255,0.4);
+	
+}
+span {
+	color: white;
+}
