--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#index</h1>
 <p>Find me in app/views/pages/index.html.erb</p>
+<div class="span12">
+<div class="imag pull-left span8">
+</div>
+<button class="pull-center">
+	<span>Read email!</span>
+</button>
+</div>
