--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -2,7 +2,7 @@
     <div class="navbar-inner ">
       <ul class="nav">
         	<li class="span3">	
-        	  <%= link_to 'Download', root_path %>
+        	  <%= link_to 'Download', pages_download_path %>
         	</li>
           <li class="span5">
             <%= link_to 'Sign Up', root_path %>
