--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -8,7 +8,7 @@
           	<li>	
           	  <%= link_to 'Home', root_path %>
           	</li>
-            <!-- <li>  
+            <li>  
               <%= link_to 'Register', new_user_registration_path %>
             </li>
             <li>  
@@ -16,7 +16,10 @@
             </li>
             <li>  
               <%= link_to 'Sign In', new_user_session_path %>
-            </li> -->
+            </li>
+            <li>  
+              <%= link_to 'Messages', messages_path %>
+            </li>
         </ul>
       </div>
   </nav>
