--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,30 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+
 <div class="span12">
-<div class="imag pull-left span8">
-</div>
-<button class="pull-center">
-	<span>Read email!</span>
-</button>
+	<div class="imag pull-left span7">
+	</div>
+	
+	<div class="description span4">
+		<div class="row">
+			<h1>Meet VocalEmail!</h1>
+			<p>An interactive application that allows users to read and write emails using vocal commands and gestures.</p>
+		</div>
+		
+		<div class="row">
+			<button class="read">
+				Read this email!
+			</button>
+		</div>
+
+		<div class="row">
+			<button class="sign">
+				Sign Up!
+			</button>
+			<div class="row">
+				<span>or</span>
+				<%= link_to 'Log in', root_path %>
+			</div>
+		</div>
+
+	</div>
+
 </div>
