homepage reads static text

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,68 +1,84 @@
-.header {
-	display: block;
-	text-align: center;
-	font-size: 40px;
-	margin: 30px auto;
-
-}
-
-/*li:first-child{
-	padding-left: 50px;
-}*/
-
-.navbar-inner {
-	text-align: center;
-	opacity: 0.6;
-
-}
 html {
- background-image: url("background.jpg"); 
+ background-image: url("background.jpg");
  background-size: cover;
 }
 
 body {
+  font-family: "Dosis", Helvetica, Arial, sans-serif;
 	background-color: transparent;
+  font-size: 16px;
 }
+
 hr {
 	opacity: 0.6;
 }
-a:hover{
-	text-decoration: none;
-	background-color: transparent;
-	opacity: 0.5;
+
+a {
+  color: white;
+}
+a:hover {
+  color: white;
 }
 
 span {
 	color: white;
 }
-.imag{
-	background-image: url("550x400.jpg");
-  background-repeat:no-repeat;
- 	height: 400px;
- 	width: 540px;
- 	margin: 0px ;
+
+footer {
+  color: #888;
+  margin-top: 100px;
+  font-weight: 200;
 }
-.description{
-	padding: 10px 20px;
+
+footer a {
+  color: #d8d8d8;
 }
+
+.logo {
+  display: inline-block;
+  text-indent: -9000px;
+  width: 200px;
+  height: 60px;
+  background-color: red;
+  margin-top: 60px;
+  margin-bottom: 100px;
+}
+
+
+nav.main-menu {
+  margin-top: 60px;
+  margin-bottom: 20px;
+  font-size: 32px;
+  font-weight: 200;
+}
+
+nav.main-menu ul li {
+  display: inline-block;
+  float: right;
+}
+
+nav.main-menu ul li a {
+  line-height: 40px;
+  margin-left: 20px;
+  color: #f0f0f0;
+}
+
+nav.main-menu ul li a:hover, nav.main-menu ul li.active a {
+  color: white;
+  text-decoration: none;
+}
+
+.description {
+	margin-top: 50px;
+	margin-bottom: 50px;
+  font-size: 24px;
+  line-height: 36px;
+  color: #f0f0f0;
+}
+
 .description p{
 	color: rgba(255,255,255,0.75);
 	font-size: 22px;
 	line-height: 26px;
 }
-.description h1{
-	color:white;
-}
-button.read {
-	width: 170px;
-	height: 60px;
-	font-size: 18px;
-}
 
-button.sign {
-	margin-top: 15px;
-	width: 210px;
-	height: 70px;
-	font-size: 18px;
-	
-}
