--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,18 @@
-<div class="footer">
-    <address class="pull-right">
-      <strong>Contact</strong><br>
-      <a href="mailto:#">email.forvisuallyimpaired@example.com</a>
-    </address>
-    
+<footer class="row">
+
+  <div class="span6">
     <p>
-         &copy; Email for visually impaired.2013
+      &copy; Email for visually impaired.2013
     </p>
-    
-</div>
+  </div>
+
+  <div class="span6">
+    <p class="pull-right">
+      Contact
+      <a href="mailto:email.forvisuallyimpaired@example.com">
+        email.forvisuallyimpaired@example.com
+      </a>
+    </p>
+  </div>
+
+</footer>
