--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -1,15 +1,15 @@
-<nav class="navbar ">
-    <div class="navbar-inner ">
-      <ul class="nav">
-        	<li class="span3">	
-        	  <%= link_to 'Download', pages_download_path %>
-        	</li>
-          <li class="span5">
-            <%= link_to 'Sign Up', root_path %>
-          </li>
-          <li class="span3">  
-            <%= link_to 'Log in', root_path %>
-          </li> 
-      </ul>
-    </div>
-</nav>
+<div class="span6">
+  <nav class="main-menu">
+    <ul>
+      <li>
+        <%= link_to 'Sign Up', root_path %>
+      </li>
+      <li>
+        <%= link_to 'Log in', root_path %>
+      </li>
+    	<li>
+    	  <%= link_to 'Download', pages_download_path %>
+    	</li>
+    </ul>
+  </nav>
+</div>
