--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,19 +3,27 @@
 <head>
   <title>Email</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Dosis:200,300,400,600,700' %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <div class="container">
- 
 
-<%= render partial: 'shared/header' %>     
-<%= render partial: 'shared/meniu' %>
-<%= yield %>
-<hr>
-<%= render partial: 'shared/footer' %>    
+    <div class="row">
+      <%= render partial: 'shared/header' %>
+      <%= render partial: 'shared/meniu' %>
+    </div>
+
+    <div class="row">
+      <%= yield %>
+    </div>
+
+    <%= render partial: 'shared/footer' %>
 
   </div>
+
+  <audio id="player" src="">
+  </audio>
 </body>
 </html>
