--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,30 +1,22 @@
+<div class="span6">
+  <img src="http://placehold.it/540x400">
+</div>
 
-<div class="span12">
-	<div class="imag pull-left span7">
-	</div>
-	
-	<div class="description span4">
-		<div class="row">
-			<h1>Meet VocalEmail!</h1>
-			<p>An interactive application that allows users to read and write emails using vocal commands and gestures.</p>
-		</div>
-		
-		<div class="row">
-			<button class="read">
-				Read this email!
-			</button>
-		</div>
+<div class="span6 text-center">
+  <p class="description">
+    An interactive application that allows users to read and write emails using vocal commands and gestures.
+  </p>
 
-		<div class="row">
-			<button class="sign">
-				Sign Up!
-			</button>
-			<div class="row">
-				<span>or</span>
-				<%= link_to 'Log in', root_path %>
-			</div>
-		</div>
+  <p>
+  	<a href="#" class="btn btn-success btn-large" id="read-email">
+  		Read this email!
+    </a>
+  </p>
 
-	</div>
+  <p class="description">
+    <%= link_to 'Sign up', root_path, class: "btn btn-medium" %>
+    or
+    <%= link_to 'Log in', root_path %>
+  </p>
 
 </div>
