--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,3 @@
-<div class="header">
-  <%= link_to 'Email', root_path %>
+<div class="span6">
+  <%= link_to 'Email', root_path, class: "logo" %>
 </div>
