change image to textarea

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,15 @@
-<div class="span6">
-  <img src="http://placehold.it/540x400">
+<div class="email span6">
+  <p>From: tom.johnson@example.com</p>
+  <p>Subject: Hi there!</p>
+  
+  <p>Content:</p>
+  <textarea id="my-email" rows="10" cols="100" name="email-content">
+   Hi George, I was so happy to hear from you again. I hope you enjoyed the gift we've sent you.
+   I can't wait to meet you this summer. 
+
+   Take care,
+   Alice.
+  </textarea>
 </div>
 
 <div class="span6 text-center">
