--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -81,4 +81,12 @@ nav.main-menu ul li a:hover, nav.main-menu ul li.active a {
 	font-size: 22px;
 	line-height: 26px;
 }
-
+.email{
+  color: rgba(255,255,255,0.50);
+  font-size: 16px;
+  line-height: 18px;
+}
+textarea{
+  width: 400px;
+  background-color: #f0f0f0;
+}
