--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,9 +24,14 @@
   </p>
 
   <p class="description">
-    <%= link_to 'Sign up', root_path, class: "btn btn-medium" %>
-    or
-    <%= link_to 'Log in', root_path %>
-  </p>
+      <a href="http://play.google.com/store">
+        <button class="googlebutton"> 
+        </button>
+      </a>
+      <a href="http://store.apple.com/us">
+        <button class="appbutton"> 
+        </button>
+      </a>
+ </p>
 
 </div>
