--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,17 @@
+<%= link_to 'Inbox', messages_path %>
+<%= link_to 'Sent', messages_path(folder: 'sent') %>
+<%= link_to 'Drafts', messages_path(folder: 'drafts') %>
+<%= link_to 'Archive', messages_path(folder: 'archive') %>
+
+
+<p>
+  <%= @current_folder %>
+</p>
+
+
+
+
+
 <h1>Listing messages</h1>
 
 <table>
