--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,14 +24,15 @@
   </p>
 
   <p class="description">
-      <a href="http://play.google.com/store">
-        <button class="googlebutton"> 
-        </button>
-      </a>
-      <a href="http://store.apple.com/us">
-        <button class="appbutton"> 
-        </button>
-      </a>
+    <a href="http://play.google.com/store">
+      <div class="googlebutton"> 
+      </div>
+    </a>
+   
+    <a href="http://store.apple.com/us">
+      <div class="appbutton"> 
+      </div>
+    </a>
  </p>
 
 </div>
