--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -2,10 +2,10 @@
   <nav class="main-menu">
     <ul>
       <li>
-        <%= link_to 'Sign Up', root_path %>
+        <%= link_to 'Sign Up', new_user_registration_path %>
       </li>
       <li>
-        <%= link_to 'Log in', root_path %>
+        <%= link_to 'Log in', new_user_session_path %>
       </li>
     </ul>
   </nav>
