--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,11 +4,11 @@
   
   <p>Content:</p>
   <textarea id="my-email" rows="10" cols="100" name="email-content">
-   Hi George, I was so happy to hear from you again. I hope you enjoyed the gift we've sent you.
+   Hi Alice, I was so happy to hear from you again. I hope you enjoyed the gift we've sent you.
    I can't wait to meet you this summer. 
 
    Take care,
-   Alice.
+   Tom.
   </textarea>
 </div>
 
@@ -24,14 +24,12 @@
   </p>
 
   <p class="description">
-    <a href="http://play.google.com/store">
-      <div class="googlebutton"> 
-      </div>
+    <a href="http://play.google.com/store" target="_blank">
+      <%= image_tag 'googleplay1.png' %> 
     </a>
    
-    <a href="http://store.apple.com/us">
-      <div class="appbutton"> 
-      </div>
+    <a href="http://store.apple.com/us" target="_blank">
+      <%= image_tag 'appstore1.png' %> 
     </a>
  </p>
 
