--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -90,26 +90,56 @@ textarea{
   width: 400px;
   background-color: #f0f0f0;
 }
-div.loginform{
-  margin-left: 340px;
-  background-color: rgba(0,0,0,0.2);
-  width: 230px;
-  height: 390px;
-  padding: 20px 50px;
-  border-radius: 8px;
-  color:white;
-}
-
-div.signupform{
-  margin-left: 340px;
-  background-color: rgba(0,0,0,0.2);
-  width: 230px;
-  height: 420px;
-  padding: 20px 50px;
-  border-radius: 8px;
-  color:white;
-}
 
 h2.formtitle{
   font-weight: normal;
 }
+
+div.loginform{
+  margin-left: 240px;
+  background-color: rgba(0,0,0,0.2);
+  width: 360px;
+  height: 300px;
+  padding: 45px 80px;
+  border-radius: 8px;
+  color:white;
+}
+
+div.loginform label{
+  display:inline-block;
+  width:100px;
+}
+
+div.signupform{
+  margin-left: 240px;
+  background-color: rgba(0,0,0,0.2);
+  width: 360px;
+  height: 300px;
+  padding: 45px 80px;
+  border-radius: 8px;
+  color:white;
+}
+
+div.signupform label{
+  display:inline-block;
+  width:100px;
+}
+
+div.forgotpassform{
+  margin-left: 240px;
+  background-color: rgba(0,0,0,0.2);
+  width: 360px;
+  height: 200px;
+  padding: 45px 80px;
+  border-radius: 8px;
+  color:white;
+}
+
+div.forgotpassform label{
+  display:inline-block;
+  width: 100px;
+}
+
+
+
+
