--- a/app/views/shared/_meniu.html.erb
+++ b/app/views/shared/_meniu.html.erb
@@ -1,11 +1,18 @@
 <div class="span6">
   <nav class="main-menu">
     <ul>
+    
       <li>
-        <%= link_to 'Sign Up', new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to 'Log in', new_user_session_path %>
+ <% if user_signed_in? %>
+        Signed in as <%= current_user.email %>
+       <li> <%= link_to 'Messages' ,messages_path %>
+       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+        <li>
+    <% else %>
+        <%= link_to 'Sign Up', new_user_registration_path %>  or <%= link_to 'Sign in', new_user_session_path %>
+     
+    <% end %>
+  </li>
       </li>
     </ul>
   </nav>
