--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@message) do |f| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
@@ -12,15 +13,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :sender_id %><br />
+    <%= f.label :sender_id %>
     <%= f.number_field :sender_id %>
   </div>
   <div class="field">
-    <%= f.label :receiver_id %><br />
+    <%= f.label :receiver_id %>
     <%= f.number_field :receiver_id %>
   </div>
   <div class="field">
-    <%= f.label :subject %><br />
+    <%= f.label :subject %>
     <%= f.text_field :subject %>
   </div>
   <div class="field">
@@ -28,6 +29,6 @@
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class:'btn btn-medium btn-success'%>
   </div>
 <% end %>
