modify new message controller

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -11,15 +11,9 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
-    <%= f.label :sender_id %>
-    <%= f.number_field :sender_id %>
-  </div>
-  <div class="field">
-    <%= f.label :receiver_id %>
->>>>>>> 3ec2077365e3770c572e6444e9ba4d7f2408b7f5
-    <%= f.number_field :receiver_id %>
+    <%= f.label :receiver %>
+    <%= f.text_field :receiver %>
   </div>
   <div class="field">
     <%= f.label :subject %>
