--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,4 @@
+<div class="messagecontainer">
   <div id="folders">
     <ul>
       <li>
@@ -80,26 +81,8 @@
 
   <div id="mail">
       <div id="from_to">
-        <p>
-            Subject:
-            
-        </p>
-        <% if @current_folder=='inbox' %>
-           <p class="sender_receiver">
-               From:
-                
-            </p>
         
-            <p class="sender_receiver">
-                To:
-            </p>
-        <% else %>
-            <p class="sender_receiver">
-                To:
-            </p>
-        <% end %>
       </div>
-
-
   </div>
+</div>
 </div>
